# backend/src/useCases/enderecos/FindEndereco/FindEnderecoDTO.ts
@@ -1,0 +1,15 @@
+export interface IFindEnderecoRequestDTO {
+    codigoEndereco: string;
+}
+
+export interface IFindEnderecoResponseDTO {
+    codigoEndereco: string;
+    cep: string;
+    nomeRua: string;
+    numeroCasa: string;
+    complemento: string;
+    bairro: string;
+    cidade: string;
+    estado: string;
+    codigoCliente: string;
+}
